# mod_wsman

./: .gitignore  AUTHORS  Makefile.am  configure.ac  configure.in
example/: httpd.conf
pkg/: mod_wsman.spec.in  wsman.conf
src/: Makefile.am  mod_wsman.c
