dnl Process this file with autoconf to produce a configure script.
AC_INIT(src/mod_wsman.c)

AC_CONFIG_SRCDIR(src/mod_wsman.c)
AC_CANONICAL_HOST
AC_CANONICAL_SYSTEM
AM_INIT_AUTOMAKE(mod_wsman, 0.1)
AM_CONFIG_HEADER(config.h)


dnl the debug build options adds symbols to compiler output (-g for g++) 
AC_ARG_ENABLE(debug,
[  --enable-debug	add debug symbols to compiler and linker output for source code debugging],
[case "${enableval}" in
  yes) debug=true ;;
  no)  debug=false ;;
  *) AC_MSG_ERROR(bad value ${enableval} for --enable-debug) ;;
esac],[debug=false])
AM_CONDITIONAL(DEBUG, test x$debug = xtrue)

dnl AC_CHECK_COMPILERS
AC_PROG_CC

PKG_CHECK_MODULES(OPENWSMAN, [openwsman-server >= 0.5.0])
AC_CHECK_PROG(EXISTS_APXS, apxs, yes, )
if test -z "$EXISTS_APXS"; then
   AC_MSG_ERROR([please install the apache apxs tool. Download apache http server from http://www.apache.org, compile and install it and make sure that apxs is in your path])
fi

AC_CHECK_FUNCS(strtok_r \
               getpid \
               strsep \
               gettimeofday \
               unlink \
               syslog \
               sleep \
               fnmatch \
               timegm \
               daemon  \
               va_copy
               )


AC_LIBTOOL_DLOPEN
AC_LIBTOOL_WIN32_DLL
AM_PROG_LIBTOOL
AC_SUBST(LIBTOOL_DEPS)
AC_ENABLE_SHARED(yes)
AC_ENABLE_STATIC(yes)

AC_PROG_INSTALL
AC_PROG_RANLIB
dnl Checks for libraries.

dnl Checks for header files.
AC_HEADER_STDC

AC_OUTPUT(Makefile src/Makefile)
